--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <!--email_off-->23f3000756@ds.study.iitm.ac.in<!--/email_off-->
 <a href="college.html">Bhilai Colleges</a>
+<a href="divyani.html">Divyani's Profile</a>
